@@ -1,3 +1,12 @@
+2002-10-25  Jens Finek <jens@triq.net>
+
+	Based on a patch by Andy Piper <andy.piper@freeuk.com>.
+	
+	* src/apotheke-view.c: Read and write bool for hide_ignored key.
+	String fixes.
+
+	* apotheke.schemas: Type fixes. 
+
 2002-06-16  Jens Finke <jens@triq.net>
 
 	* apotheke.schemas: Added apps/apotheke/diff/operation key.
